--- a/style.css
+++ b/style.css
@@ -23,3 +23,14 @@ footer{
     height: 80vh;
     background-color: rgb(253, 156, 12);
 }
+.foglio{
+    padding: 3%;
+    margin-top: 4%;
+    margin-bottom: 4%;
+    border: 1px solid black;
+}
+.navbar{
+    position: sticky;
+    top: 0;
+    z-index: 999;
+}
